[tool.poetry]
name = "gcal_forcerun"
version = "0.1.0"
description = ""
authors = ["TetsutaroWatanabe <tetsutaro.watanabe@mo-t.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
